--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,10 @@
 
 <body id="head">
 	<header>
-		<nav>
-			<a href="/downloads">Downloads</a>
-			
+		<nav class="split">
+			<a href="/">MAIN</a>
+			<a href="/downloads">DOWNLOAD CLIENT</a>
+			<a href="https://github.com/DEgITx/cpk">SUPPORT PROJECT</a>
 		</nav>
 		<div class="w100p searchBox row inline">
 			<div class="logo"><a href="/"><img src="/resources/cpk.png" /></a></div>
