--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
 	<link href="/flex.css" rel="stylesheet" />
 	<link href="/style.css" rel="stylesheet" />
+	<script src="/cpk.js"></script>
 </head>
 
 <body id="head">
