--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
 	<link href="/flex.css" rel="stylesheet" />
 	<link href="/style.css" rel="stylesheet" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="/cpk.js"></script>
 </head>
 
@@ -36,13 +37,13 @@
 				<div class="search">
 					<input type="search" name="searchInput" placeholder="Search cpk package" autocomplete="off" value="" element="input" />
 				</div>
-				<button type="submit" class="searchButton" title="">Search</button>
+				<button type="submit" class="searchButton" id="searchButton" title="">Search</button>
 			</div>
 			<div class="row center">Need client ? download: </div>
 			<div class="row downloadLinks center">
-				<button class="downloadLink button"><i class="fab fa-windows"></i> Windows</button>
-				<button class="downloadLink button"><i class="fas fa-linux"></i> Linux</button>
-				<button class="downloadLink button"><i class="fas fa-apple"></i> MacOS</button>
+				<button class="downloadLink button" onclick="window.location.href='https://github.com/DEgITx/cpk/releases/download/v0.1.0/cpk-windows-latest-x64_v0.1.0.zip';"><i class="fab fa-windows"></i> Windows</button>
+				<button class="downloadLink button" onclick="window.location.href='https://github.com/DEgITx/cpk/releases/download/v0.1.0/cpk-ubuntu-latest-x64_v0.1.0.zip';"><i class="fas fa-linux"></i> Linux</button>
+				<button class="downloadLink button" onclick="window.location.href='https://github.com/DEgITx/cpk/releases/download/v0.1.0/cpk-windows-latest-x64_v0.1.0.zip';"><i class="fas fa-apple"></i> MacOS</button>
 			</div>
 		</div>
 	</header>
