--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
 					<input type="search" name="searchInput" placeholder="Search cpk package" autocomplete="off" value="" element="input" />
 				</div>
 				<button type="submit" class="searchButton" id="searchButton" title="">Search</button>
+				<div class="column searchResults split" id="searchResults">
+				</div>
 			</div>
 			<div class="row center">Need client ? download: </div>
 			<div class="row downloadLinks center">
