--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,11 @@
 				%>
 					${readme}
 				<%
-					};
+					} else if (package.description) {
+				%>
+					${package.description}
+				<%
+					}
 				%>
 			</div>
 			<div class="rightPanel column">
