--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 			<a href="/">MAIN</a>
 			<a href="https://github.com/DEgITx/cpk/releases">DOWNLOAD CLIENT</a>
 			<a href="https://github.com/DEgITx/cpk">SUPPORT PROJECT</a>
+			<a href="https://github.com/DEgITx/cpk/blob/master/README.md">DOCUMENTATION</a>
 		</nav>
 		<div class="w100p searchBox row inline">
 			<div class="logo"><a href="/"><img src="/resources/cpk.png" /></a></div>
