--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 		content="cpk<% if (typeof package != 'undefined') { %>, ${package.package}<% } %>, c++, packages, manager, c, rust, npm, pip" />
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin  />
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 
 	<link href="/flex.css" rel="stylesheet" />
